attempted to delete transform on canvas 1 to see what happens. cleaned up html file ids

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <canvas id="canvas1"></canvas>
     </div>
 
-    <div id="'canvas 2 box">
+    <div id="canvas 2 box">
         <canvas id="canvas2"></canvas>
     </div>
 
-    <div id="'canvas 3 box">
+    <div id="canvas 3 box">
         <canvas id="canvas3"></canvas>
     </div>
 
