--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <canvas id="canvas3"></canvas>
   
 
+    <div class="helloWorld">
+        <button id="helloWorldButton">hello world</button>
+        </div>
+        <br>
+    <div class="dipsyAndText">
+       <img id="dipsy" src="dipsy tootsy.png">
+
+        <p id="textAfterButton" class="hidden"> I'd like to take you on a journey, if you're willing. </p>
+    </div>
  
     <script src="index.js"> 
      
